--- a/Aula01/style.scss
+++ b/Aula01/style.scss
@@ -6,16 +6,8 @@ p{
   b{
     background: black;
   }
-}
-p span{
-  background: red;
-}
 
-p b{
-  background: black;
-}
-
-
-body{
-  color: blue;
+  &:hover{
+    color: blanchedalmond;
+  }
 }
