--- a/Aula02/assets/scss/button.scss
+++ b/Aula02/assets/scss/button.scss
@@ -1,12 +1,29 @@
-.btn {
+@mixin btn {
   width: 200px;
   padding: 10px;
   background: none;
   border: 0;
   border-radius: 10px;
+  display: block;
+  margin: 10px;
+}
+
+@mixin button-style($background, $color) {
+  background: $background;
+  color: $color;
 }
 
 .btn-laranja{
-  @extend .btn;
-  background: $color-orange;
+  @include btn;
+  @include button-style($color-orange,#FFF )
+}
+
+.btn-roxo{
+  @include btn;
+  @include button-style($color-roxo,#FFF )
+}
+
+.btn-amarelo{
+  @include btn;
+  @include button-style($color-amarelo, black )
 }
