Estudos de refatoração

--- a/Aula02/assets/scss/button.scss
+++ b/Aula02/assets/scss/button.scss
@@ -1,4 +1,9 @@
-@mixin btn {
+@mixin button-style($background, $color) {
+  background: $background;
+  color: $color;
+}
+
+.btn {
   width: 200px;
   padding: 10px;
   background: none;
@@ -6,24 +11,17 @@
   border-radius: 10px;
   display: block;
   margin: 10px;
-}
 
-@mixin button-style($background, $color) {
-  background: $background;
-  color: $color;
-}
+  &.btn-laranja{
+    @include button-style($color-orange,#FFF )
+  }
 
-.btn-laranja{
-  @include btn;
-  @include button-style($color-orange,#FFF )
-}
+  &.btn-roxo{
+    @include button-style($color-roxo,#FFF )
+  }
 
-.btn-roxo{
-  @include btn;
-  @include button-style($color-roxo,#FFF )
-}
+  &.btn-amarelo{
+    @include button-style($color-amarelo, black )
+  }
 
-.btn-amarelo{
-  @include btn;
-  @include button-style($color-amarelo, black )
 }
