--- a/Aula02/assets/css/style.css
+++ b/Aula02/assets/css/style.css
@@ -1,4 +1,4 @@
-.btn-laranja {
+.btn {
   width: 200px;
   padding: 10px;
   background: none;
@@ -6,30 +6,16 @@
   border-radius: 10px;
   display: block;
   margin: 10px;
+}
+.btn.btn-laranja {
   background: orange;
   color: #FFF;
 }
-
-.btn-roxo {
-  width: 200px;
-  padding: 10px;
-  background: none;
-  border: 0;
-  border-radius: 10px;
-  display: block;
-  margin: 10px;
+.btn.btn-roxo {
   background: purple;
   color: #FFF;
 }
-
-.btn-amarelo {
-  width: 200px;
-  padding: 10px;
-  background: none;
-  border: 0;
-  border-radius: 10px;
-  display: block;
-  margin: 10px;
+.btn.btn-amarelo {
   background: yellow;
   color: black;
 }
